src/css/gallery.css
.gallery-img {
  height: 300px;
  width: auto;
  position: relative;
}

.gallery-img-caption {
  position: absolute;
  background: black;
  color: white;
  bottom: 0;
  left: 0;
  padding: 10px 3px;
  opacity: 0.2;
  transform: scale(1);
    z-index: 10;
}

.g-img-box {
  transform: scale(1);
  transition: transform 0.5s;
}

.g-img-box:hover {
  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
  transform: scale(1.05);
  /* z-index: 10; */
}

.g-img-box:hover + .gallery-img-caption,
.gallery-img-caption:hover {
  opacity: 0.8;
  transform: scale(1.07);
}

